--- a/catalog.html
+++ b/catalog.html
@@ -104,7 +104,7 @@
           </h3>
           <div class="price-block">
             <p class="item-price">2 900 руб.</p>
-            <a class="btn btn-buy" href="#">Купить</a>
+            <a class="btn btn-btn-buy" href="#">Купить</a>
           </div>
         </article>
 
@@ -117,7 +117,7 @@
           </h3>
           <div class="price-block">
             <p class="item-price">720 руб.</p>
-            <a class="btn buy" href="#">Купить</a>
+            <a class="btn btn-buy" href="#">Купить</a>
           </div>
         </article>
 
@@ -130,7 +130,7 @@
           </h3>
           <div class="price-block">
             <p class="item-price">290 руб.</p>
-            <a class="btn buy" href="#">Купить</a>
+            <a class="btn btn-buy" href="#">Купить</a>
           </div>
         </article>
 
@@ -143,7 +143,7 @@
           </h3>
           <div class="price-block">
             <p class="item-price">500 руб.</p>
-            <a class="btn buy" href="#">Купить</a>
+            <a class="btn btn-buy" href="#">Купить</a>
           </div>
         </article>
 
@@ -156,7 +156,7 @@
           </h3>
           <div class="price-block">
             <p class="item-price">300 руб.</p>
-            <a class="btn buy" href="#">Купить</a>
+            <a class="btn btn-buy" href="#">Купить</a>
           </div>
         </article>
 
