--- a/catalog-item.html
+++ b/catalog-item.html
@@ -1,132 +1,131 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
-  </head>
-  <body>
+</head>
+<body>
     <header class="main-header">
-      <div class="container">
-        <div class="header-logo">
-          <a href="#"><img src="http://placehold.it/111x20" width="111" height="20" alt="Барбершоп"></a>
+        <div class="container">
+            <div class="header-logo">
+                <a href="#"><img src="http://placehold.it/111x20" width="111" height="20" alt="Барбершоп"></a>
+            </div>
+            <nav class="main-navigation">
+                <ul>    
+                    <li>
+                        <a href="#">Информация</a>
+                    </li>
+                    <li>
+                        <a href="#">Новости</a>
+                    </li>
+                    <li>
+                        <a href="#">Прайс-лист</a>
+                    </li>
+                    <li>
+                        <a href="shop.html">Магазин</a>
+                    </li>
+                    <li>
+                        <a href="#">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="user-block">
+                <a class="login" href="#">Вход</a>
+            </div>
         </div>
-        <nav class="main-navigation">
-          <ul>
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li>
-              <a href="#">Новости</a>
-            </li>
-            <li>
-              <a href="#">Прайс-лист</a>
-            </li>
-            <li>
-              <a href="shop.html">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-block">
-          <a class="login" href="#">Вход</a>
-        </div>
-      </div>
     </header>
     <main class="container">
-      <header class="item-title">
-        <h1>Набор для путешествий &#171;Baxter of Califotnia&#187;</h1>
-        <div class="breadcrumbs">
-          <ul>
-            <li>
-              <a href="#">Главная</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Средства для ухода</a>
-            </li>
-            <li>
-              Набор для путешествий &#171;Baxter of Califotnia&#187;
-            </li>
-          </ul>
-        </div>
-      </header>
-      <div class="item-block">
+    <header class="item-name">
+            <h1>Набор для путешествий &#171;Baxter of Califotnia&#187;</h1>
+            <div class="breadcrumbs">
+                <ul>
+                    <li>
+                        <a href="#">Главная</a>
+                    </li>
+                    <li>
+                        <a href="#">Магазин</a>
+                    </li>
+                    <li>
+                        <a href="#">Средства для ухода</a>
+                    </li>
+                    <li>
+                        Набор для путешествий &#171;Baxter of Califotnia&#187;
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <div class="item-block">
 
-        <div class="item-gallery">
-          <figure class="item-gallery-content">
-            <img src="#" width="460" height="498" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-          </figure>
-          <button class="item-img-mini" type="button">
-            <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-          </button>
-          <button class="item-img-mini" type="button">
-            <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-          </button>
-          <button class="item-img-mini" type="button">
-            <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-          </button>
-        </div>
-        
-        <div class="item-information">
-          <div class="item-availability>
-            <div class="item-about-top">
-              <div class="availability">
-                Есть в наличии
-              </div>
-              <div class="item-code">
-                Артикул: dexter-ae
-              </div>
+            <div class="item-gallery">
+                <figure class="item-gallery-content">
+                    <img src="#" width="460" height="498" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                </figure>
+                <button class="item-img-mini" type="button">
+                    <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                </button>
+                <button class="item-img-mini" type="button">
+                    <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                </button>
+                <button class="item-img-mini" type="button">
+                    <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                </button>
             </div>
 
-            <div class="item-description">
-              <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится
-               все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для
-               умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать
-               отличным подарком.
-              </p>
+            <div class="item-information">
+                <div class="item-availability">
+                    <div class="availability-block">
+                        Есть в наличии
+                    </div>
+                    <div class="code-block">
+                        Артикул: dexter-ae
+                    </div>
+                </div>
+
+                <div class="item-description">
+                    <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится
+                        все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для
+                        умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать
+                        отличным подарком.
+                    </p>
+                </div>
+
+                <div class="item-price">
+                    <p class="item-price-value">2 900 руб.</p>
+                    <button class="btn btn-buy" type="submit">Купить</button>
+                </div>
+                <div class="item-composition">
+                    <h2>В набор входят:</h2>
+                    <ul class="composition-list">
+                        <li>Средство для умывания (50 мл)</li>
+                        <li>Увлажняющий крем (50 мл)</li>
+                        <li>Крем для бритья (50 мл)</li>
+                        <li>Крем после бритья, шампунь (50 мл)</li>
+                        <li>Удобная кожаная косметичка</li>
+                    </ul>
+                </div>
             </div>
-            
-            <div class="price-block">
-              <p class="price">2 900 руб.</p>
-              <button class="btn btn-buy" type="submit">Купить</button>
-            </div>
-          <div class="item-composition">
-            <h2>В набор входят:</h2>
-            <ul class="composition-list">
-              <li>Средство для умывания (50 мл)</li>
-              <li>Увлажняющий крем (50 мл)</li>
-              <li>Крем для бритья (50 мл)</li>
-              <li>Крем после бритья, шампунь (50 мл)</li>
-              <li>Удобная кожаная косметичка</li>
-            </ul>
-          </div>
         </div>
-      </div>
     </main>
 
     <footer class="main-footer">
-      <div class="container">
-        <section class="footer-contacts">
-          Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#">Как нас найти?</a><br>
-          Телефон: +7 (812) 666-02-66
-        </section>
-        <section class="footer-social">
-          <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-        </section>
-        <section class="footer-copyright">
-          <p>Разработано:</p>
-          <a class="btn" href="https://htmlacademy.ru">Htmlacademy.ru</a>
-        </section>
-      </div>
+        <div class="container">
+            <section class="footer-contacts">
+                Барбершоп «Бородинский»<br>
+                Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+                <a href="#">Как нас найти?</a><br>
+                Телефон: +7 (812) 666-02-66
+            </section>
+            <section class="footer-social">
+                <p>Давайте дружить!</p>
+                <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+                <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+                <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            </section>
+            <section class="footer-copyright">
+                <p>Разработано:</p>
+                <a class="btn" href="https://htmlacademy.ru">Htmlacademy.ru</a>
+            </section>
+        </div>
     </footer>
-  </body>
+</body>
 </html>
