--- a/catalog.html
+++ b/catalog.html
@@ -1,216 +1,226 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Барбершоп «Бородинский»</title>
-  </head>
+<head>
+	<meta charset="utf-8">
+	<title>Барбершоп «Бородинский»</title>
+</head>
 
-  <body>
+<body>
 
- 	<header class="main-header">
-      <div class="container">
-        <div class="header-logo">
-          <a href="#"><img src="http://placehold.it/111x20" width="111" height="20" alt="Barbershop"></a>
-        </div>
-        <nav class="main-navigation">
-          <ul>
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li>
-              <a href="#">Новости</a>
-            </li>
-            <li>
-              <a href="#">Прайс-лист</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-block">
-          <a class="login" href="#">Вход</a>
-        </div>
-      </div>
-    </header>
+	<header class="main-header">
+		<div class="container">
+			<div class="header-logo">
+				<a href="#"><img src="http://placehold.it/111x20" width="111" height="20" alt="Barbershop"></a>
+			</div>
+			<nav class="main-navigation">
+				<ul>
+					<li>
+						<a href="#">Информация</a>
+					</li>
+					<li>
+						<a href="#">Новости</a>
+					</li>
+					<li>
+						<a href="#">Прайс-лист</a>
+					</li>
+					<li>
+						<a href="#">Магазин</a>
+					</li>
+					<li>
+						<a href="#">Контакты</a>
+					</li>
+				</ul>
+			</nav>
+			<div class="user-block">
+				<a class="login" href="#">Вход</a>
+			</div>
+		</div>
+	</header>
 
-    <main class="container">
+	<main class="container">
 
-      <div class="catalog-title">
-        <h1>Средства для ухода</h1>
+		<div class="catalog-title">
+			<h1>Средства для ухода</h1>
 
-        <div class="breadcrumbs">
-          <ul>
-            <li>
-          	  <a href="#">Главная</a>
-            </li>
-            <li>
-          	  <a href="#">Магазин</a>
-            </li>
-            <li>
-          	  Средства для ухода
-            </li>
-          </ul>
-        </div>
-      </div>
+			<div class="breadcrumbs">
+				<ul>
+					<li>
+						<a href="#">Главная</a>
+					</li>
+					<li>
+						<a href="#">Магазин</a>
+					</li>
+					<li>
+						Средства для ухода
+					</li>
+				</ul>
+			</div>
+		</div>
 
-      <section class="catalog-filter">
-        <form action="#" method="post">
-          <h2>Производители:</h2>
+		<section class="filter">
 
-            <input id="baxter" type="checkbox" name="baxter-filter" checked>
-            <label for="baxter">Baxter of California</label>
-            
-            <input id="mrnatty" type="checkbox" name="mrnatty-filter">
-            <label for="mrnatty">Mr Natty</label>
+			<form action="#" method="post">
 
-            <input id="suavecito" type="checkbox" name="suavecito-filter" checked>
-            <label for="suavecito">Suavecito</label>
+				<div class="filter-block filter-block-brand">
 
-            <input id="malin" type="checkbox" name="malin-filter">
-            <label for="malin">Malin+Goetz</label>
+				<h2>Производители:</h2>
 
-            <input id="murrays" type="checkbox" name="murrays-filter">
-            <label for="murrays">Murray's</label>
+				<input id="filter-baxter" type="checkbox" name="baxter" checked>
+				<label for="filter-baxter">Baxter of California</label>
 
-            <input id="americancrew" type="checkbox" name="americancrew-filter" checked>
-            <label for="crew">American crew</label>
+				<input id="filter-mrnatty" type="checkbox" name="mrnatty">
+				<label for="filter-mrnatty">Mr Natty</label>
 
-          <h2>Группы товаров:</h2>
+				<input id="filter-suavecito" type="checkbox" name="suavecito" checked>
+				<label for="filter-suavecito">Suavecito</label>
 
-            <input id="shaving" type="radio" name="goods-type" value="shaving-type">
-            <label for="shaving">Бритвенные принадлежности</label>
+				<input id="filter-malin" type="checkbox" name="malin">
+				<label for="filter-malin">Malin+Goetz</label>
 
-            <input id="care" type="radio" name="goods-type" value="care-type" checked>
-            <label for="care">Средства для ухода</label>
+				<input id="filter-murrays" type="checkbox" name="murrays">
+				<label for="filter-murrays">Murray's</label>
 
-            <input id="accessories" type="radio" name="goods-type" value="accessories-type">
-            <label for="accessories">Аксессуары</label>
+				<input id="filter-americancrew" type="checkbox" name="americancrew" checked>
+				<label for="filter-americancrew">American crew</label>
+				</div>
 
-            <button class="btn" type="submit">Показать</button>
-        </form>
-      </section>
+				<div class="filter-block filter-block-type">
 
-      <div class="catalog-goods">
-      	<article class="goods-item">
-          <a href="#">
-            <img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-          </a>
-          <h3>
-            <a class="item-name" href="#">Набор для путешествий<br><span>&#171;Baxter of Califotnia&#187;</span></a>
-          </h3>
-          <div class="price-block">
-            <p class="item-price">2 900 руб.</p>
-            <a class="btn btn-btn-buy" href="#">Купить</a>
-          </div>
-        </article>
+				<h2>Группы товаров:</h2>
 
-        <article class="goods-item">
-          <a href="#">
-            <img src="http://placehold.it/220x165" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of Califotnia&#187;">
-          </a>
-          <h3>
-            <a class="item-name" href="#">Увлажняющий кондиционер<br><span>&#171;Baxter of Califotnia&#187;</span></a>
-          </h3>
-          <div class="price-block">
-            <p class="item-price">720 руб.</p>
-            <a class="btn btn-buy" href="#">Купить</a>
-          </div>
-        </article>
+				<input id="filter-shaving" type="radio" name="type" value="shaving">
+				<label for="filter-shaving">Бритвенные принадлежности</label>
 
-        <article class="goods-item">
-          <a href="#">
-            <img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
-          </a>
-          <h3>
-            <a class="item-name" href="#">Гель для волос<br><span>&#171;Suavecito&#187;</span></a>
-          </h3>
-          <div class="price-block">
-            <p class="item-price">290 руб.</p>
-            <a class="btn btn-buy" href="#">Купить</a>
-          </div>
-        </article>
+				<input id="filter-care" type="radio" name="type" value="care" checked>
+				<label for="filter-care">Средства для ухода</label>
 
-        <article class="goods-item">
-          <a href="#">
-            <img src="http://placehold.it/220x165" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
-          </a>
-          <h3>
-            <a class="item-name" href="#">Глина для укладки волос<br><span>&#171;American crew&#187;</span></a>
-          </h3>
-          <div class="price-block">
-            <p class="item-price">500 руб.</p>
-            <a class="btn btn-buy" href="#">Купить</a>
-          </div>
-        </article>
+				<input id="filter-accessories" type="radio" name="type" value="accessories">
+				<label for="filter-accessories">Аксессуары</label>
 
-        <article class="goods-item">
-          <a href="#">
-            <img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
-          </a>
-          <h3>
-            <a class="item-name" href="#">Гель для волос<br><span>&#171;American crew&#187;</span></a>
-          </h3>
-          <div class="price-block">
-            <p class="item-price">300 руб.</p>
-            <a class="btn btn-buy" href="#">Купить</a>
-          </div>
-        </article>
+				</div>
 
-        <article class="goods-item">
-          <a href="#">
-            <img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для бритья &#171;Baxter of Califotnia&#187;">
-          </a>
-          <h3>
-            <a class="item-name" href="#">Набор для бритья<br><span>&#171;Baxter of Califotnia&#187;</span></a>
-          </h3>
-          <div class="price-block">
-            <p class="item-price">3 900 руб.</p>
-            <a class="btn btn-buy" href="#">Купить</a>
-          </div>
-        </article>
-      </div>
+				<button class="btn btn-filter" type="submit">Показать</button>
 
-      <div class="goods-pagination">
-        <ul>
-          <li>
-            <a class="btn btn-page" href="#">1</a> 	
-          </li>
-          <li>
-            <a class="btn btn-page" href="#">2</a> 	
-          </li>
-          <li>
-            <a class="btn btn-page" href="#">3</a> 	
-          </li>
-          <li>
-            <a class="btn btn-page" href="#">4</a> 	
-          </li>
-        </ul>  
-      </div>
-   </main>
+			</form>
+		</section>
 
-   <footer class="main-footer">
-      <div class="container">
-        <section class="footer-contacts">
-          Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="#">Как нас найти?</a><br>
-          Телефон: +7 (812) 666-02-66
-        </section>
-        <section class="footer-social">
-          <p>Давайте дружить!</p>
-          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-        </section>
-        <section class="footer-copyright">
-          <p>Разработано:</p>
-          <a class="btn" href="https://htmlacademy.ru">Htmlacademy.ru</a>
-        </section>
-      </div>
-    </footer>
-  </body>
+		<div class="goods">
+			<article class="goods-item">
+				<a href="#">
+					<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+				</a>
+				<h3>
+					<a class="item-name" href="#">Набор для путешествий<br><span>&#171;Baxter of Califotnia&#187;</span></a>
+				</h3>
+				<div class="price-block">
+					<p class="price-block-value">2 900 руб.</p>
+					<a class="btn btn-buy" href="#">Купить</a>
+				</div>
+			</article>
+
+			<article class="goods-item">
+				<a href="#">
+					<img src="http://placehold.it/220x165" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of Califotnia&#187;">
+				</a>
+				<h3>
+					<a class="item-name" href="#">Увлажняющий кондиционер<br><span>&#171;Baxter of Califotnia&#187;</span></a>
+				</h3>
+				<div class="price-block">
+					<p class="price-block-value">720 руб.</p>
+					<a class="btn btn-buy" href="#">Купить</a>
+				</div>
+			</article>
+
+			<article class="goods-item">
+				<a href="#">
+					<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
+				</a>
+				<h3>
+					<a class="item-name" href="#">Гель для волос<br><span>&#171;Suavecito&#187;</span></a>
+				</h3>
+				<div class="price-block">
+					<p class="price-block-value">290 руб.</p>
+					<a class="btn btn-buy" href="#">Купить</a>
+				</div>
+			</article>
+
+			<article class="goods-item">
+				<a href="#">
+					<img src="http://placehold.it/220x165" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
+				</a>
+				<h3>
+					<a class="item-name" href="#">Глина для укладки волос<br><span>&#171;American crew&#187;</span></a>
+				</h3>
+				<div class="price-block">
+					<p class="price-block-value">500 руб.</p>
+					<a class="btn btn-buy" href="#">Купить</a>
+				</div>
+			</article>
+
+			<article class="goods-item">
+				<a href="#">
+					<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
+				</a>
+				<h3>
+					<a class="item-name" href="#">Гель для волос<br><span>&#171;American crew&#187;</span></a>
+				</h3>
+				<div class="price-block">
+					<p class="price-block-value">300 руб.</p>
+					<a class="btn btn-buy" href="#">Купить</a>
+				</div>
+			</article>
+
+			<article class="goods-item">
+				<a href="#">
+					<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для бритья &#171;Baxter of Califotnia&#187;">
+				</a>
+				<h3>
+					<a class="item-name" href="#">Набор для бритья<br><span>&#171;Baxter of Califotnia&#187;</span></a>
+				</h3>
+				<div class="price-block">
+					<p class="price-block-value">3 900 руб.</p>
+					<a class="btn btn-buy" href="#">Купить</a>
+				</div>
+			</article>
+		</div>
+
+		<div class="goods-pagination">
+			<ul>
+				<li>
+					<a class="btn btn-page" href="#">1</a> 	
+				</li>
+				<li>
+					<a class="btn btn-page" href="#">2</a> 	
+				</li>
+				<li>
+					<a class="btn btn-page" href="#">3</a> 	
+				</li>
+				<li>
+					<a class="btn btn-page" href="#">4</a> 	
+				</li>
+			</ul>  
+		</div>
+	</main>
+
+	<footer class="main-footer">
+		<div class="container">
+			<section class="footer-contacts">
+				Барбершоп «Бородинский»<br>
+				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+				<a href="#">Как нас найти?</a><br>
+				Телефон: +7 (812) 666-02-66
+			</section>
+			<section class="footer-social">
+				<p>Давайте дружить!</p>
+				<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+				<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+				<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+			</section>
+			<section class="footer-copyright">
+				<p>Разработано:</p>
+				<a class="btn" href="https://htmlacademy.ru">Htmlacademy.ru</a>
+			</section>
+		</div>
+	</footer>
+</body>
 </html>
