--- a/catalog-item.html
+++ b/catalog-item.html
@@ -46,7 +46,7 @@
                         <a href="#">Магазин</a>
                     </li>
                     <li>
-                        <a href="#">Средства для ухода</a>
+                        <span><a href="#">Средства для ухода</a></span>
                     </li>
                     <li>
                         Набор для путешествий &#171;Baxter of Califotnia&#187;
@@ -57,18 +57,18 @@
         <div class="item-block">
 
             <div class="item-gallery">
-                <figure class="item-gallery-content">
+                <div class="item-gallery-content">
                     <img src="#" width="460" height="498" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-                </figure>
-                <button class="item-img-mini" type="button">
+                </div>
+                <a href="#" class="item-img-mini">
                     <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-                </button>
-                <button class="item-img-mini" type="button">
+                </a href="#">
+                <a href="#" class="item-img-mini">
                     <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-                </button>
-                <button class="item-img-mini" type="button">
+                </a href="#">
+                <a href="#" class="item-img-mini">
                     <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
-                </button>
+                </a href="#">
             </div>
 
             <div class="item-information">
@@ -91,7 +91,7 @@
 
                 <div class="item-price">
                     <p class="item-price-value">2 900 руб.</p>
-                    <button class="btn btn-buy" type="submit">Купить</button>
+                    <button class="btn btn-main" type="submit">Купить</button>
                 </div>
                 <div class="item-composition">
                     <h2>В набор входят:</h2>
