--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
 					<li>
 						<a href="#">Магазин</a>
 					</li>
-					<li>
+					<li class="active">
 						Средства для ухода
 					</li>
 				</ul>
@@ -63,140 +63,167 @@
 
 				<div class="filter-block filter-block-brand">
 
-				<h2>Производители:</h2>
+					<h2>Производители:</h2>
 
-				<input id="filter-baxter" type="checkbox" name="baxter" checked>
-				<label for="filter-baxter">Baxter of California</label>
+					<input id="filter-baxter" type="checkbox" name="brand" value="baxter" checked>
+					<label for="filter-baxter">Baxter of California</label>
 
-				<input id="filter-mrnatty" type="checkbox" name="mrnatty">
-				<label for="filter-mrnatty">Mr Natty</label>
+					<input id="filter-mrnatty" type="checkbox" name="brand" value="mrnatty">
+					<label for="filter-mrnatty">Mr Natty</label>
 
-				<input id="filter-suavecito" type="checkbox" name="suavecito" checked>
-				<label for="filter-suavecito">Suavecito</label>
+					<input id="filter-suavecito" type="checkbox" name="brand" value="suavecito" checked>
+					<label for="filter-suavecito">Suavecito</label>
 
-				<input id="filter-malin" type="checkbox" name="malin">
-				<label for="filter-malin">Malin+Goetz</label>
+					<input id="filter-malin" type="checkbox" name="brand" value="malin">
+					<label for="filter-malin">Malin+Goetz</label>
 
-				<input id="filter-murrays" type="checkbox" name="murrays">
-				<label for="filter-murrays">Murray's</label>
+					<input id="filter-murrays" type="checkbox" name="brand" value="murrays">
+					<label for="filter-murrays">Murray's</label>
 
-				<input id="filter-americancrew" type="checkbox" name="americancrew" checked>
-				<label for="filter-americancrew">American crew</label>
+					<input id="filter-americancrew" type="checkbox" name="brand" value="americancrew" checked>
+					<label for="filter-americancrew">American crew</label>
+
 				</div>
 
 				<div class="filter-block filter-block-type">
 
-				<h2>Группы товаров:</h2>
+					<h2>Группы товаров:</h2>
 
-				<input id="filter-shaving" type="radio" name="type" value="shaving">
-				<label for="filter-shaving">Бритвенные принадлежности</label>
+					<input id="filter-shaving" type="radio" name="type" value="shaving">
+					<label for="filter-shaving">Бритвенные принадлежности</label>
 
-				<input id="filter-care" type="radio" name="type" value="care" checked>
-				<label for="filter-care">Средства для ухода</label>
+					<input id="filter-care" type="radio" name="type" value="care" checked>
+					<label for="filter-care">Средства для ухода</label>
 
-				<input id="filter-accessories" type="radio" name="type" value="accessories">
-				<label for="filter-accessories">Аксессуары</label>
+					<input id="filter-accessories" type="radio" name="type" value="accessories">
+					<label for="filter-accessories">Аксессуары</label>
 
 				</div>
 
-				<button class="btn btn-filter" type="submit">Показать</button>
+				<button class="btn btn-main" type="submit">Показать</button>
 
 			</form>
 		</section>
 
 		<div class="goods">
+
 			<article class="goods-item">
+
 				<a href="#">
 					<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
 				</a>
-				<h3>
-					<a class="item-name" href="#">Набор для путешествий<br><span>&#171;Baxter of Califotnia&#187;</span></a>
-				</h3>
-				<div class="price-block">
-					<p class="price-block-value">2 900 руб.</p>
-					<a class="btn btn-buy" href="#">Купить</a>
+
+				<div class="item-name">
+					<a href="#">Набор для путешествий<br><span>&#171;Baxter of Califotnia&#187;</span></a>
 				</div>
+
+				<div class="item-price">
+					<div class="item-price-value">2 900 руб.</div>
+					<a class="btn btn-main" href="#">Купить</a>
+				</div>
+
 			</article>
 
 			<article class="goods-item">
+
 				<a href="#">
 					<img src="http://placehold.it/220x165" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of Califotnia&#187;">
 				</a>
-				<h3>
-					<a class="item-name" href="#">Увлажняющий кондиционер<br><span>&#171;Baxter of Califotnia&#187;</span></a>
-				</h3>
-				<div class="price-block">
-					<p class="price-block-value">720 руб.</p>
-					<a class="btn btn-buy" href="#">Купить</a>
+
+				<div class="item-name">
+					<a href="#">Увлажняющий кондиционер<br><span>&#171;Baxter of Califotnia&#187;</span></a>
 				</div>
+
+				<div class="item-price">
+					<div class="item-price-value">720 руб.</div>
+					<a class="btn btn-main" href="#">Купить</a>
+				</div>
+
 			</article>
 
 			<article class="goods-item">
+
 				<a href="#">
 					<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
 				</a>
-				<h3>
-					<a class="item-name" href="#">Гель для волос<br><span>&#171;Suavecito&#187;</span></a>
-				</h3>
-				<div class="price-block">
-					<p class="price-block-value">290 руб.</p>
-					<a class="btn btn-buy" href="#">Купить</a>
+
+				<div class="item-name">
+					<a href="#">Гель для волос<br><span>&#171;Suavecito&#187;</span></a>
 				</div>
+
+				<div class="item-price">
+					<div class="item-price-value">290 руб.</div>
+					<a class="btn btn-main" href="#">Купить</a>
+				</div>
+
 			</article>
 
 			<article class="goods-item">
+
 				<a href="#">
 					<img src="http://placehold.it/220x165" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
 				</a>
-				<h3>
-					<a class="item-name" href="#">Глина для укладки волос<br><span>&#171;American crew&#187;</span></a>
-				</h3>
-				<div class="price-block">
-					<p class="price-block-value">500 руб.</p>
-					<a class="btn btn-buy" href="#">Купить</a>
+
+				<div class="item-name">
+					<a href="#">Глина для укладки волос<br><span>&#171;American crew&#187;</span></a>
 				</div>
+
+				<div class="item-price">
+					<div class="item-price-value">500 руб.</div>
+					<a class="btn btn-main" href="#">Купить</a>
+				</div>
+
 			</article>
 
 			<article class="goods-item">
+
 				<a href="#">
 					<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
 				</a>
-				<h3>
-					<a class="item-name" href="#">Гель для волос<br><span>&#171;American crew&#187;</span></a>
-				</h3>
-				<div class="price-block">
-					<p class="price-block-value">300 руб.</p>
-					<a class="btn btn-buy" href="#">Купить</a>
+
+				<div class="item-name">
+					<a href="#">Гель для волос<br><span>&#171;American crew&#187;</span></a>
 				</div>
+
+				<div class="item-price">
+					<div class="item-price-value">300 руб.</div>
+					<a class="btn btn-main" href="#">Купить</a>
+				</div>
+
 			</article>
 
 			<article class="goods-item">
+
 				<a href="#">
 					<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для бритья &#171;Baxter of Califotnia&#187;">
 				</a>
-				<h3>
-					<a class="item-name" href="#">Набор для бритья<br><span>&#171;Baxter of Califotnia&#187;</span></a>
-				</h3>
-				<div class="price-block">
-					<p class="price-block-value">3 900 руб.</p>
-					<a class="btn btn-buy" href="#">Купить</a>
+
+				<div class="item-name">
+					<a  href="#">Набор для бритья<br><span>&#171;Baxter of Califotnia&#187;</span></a>
 				</div>
+
+				<div class="item-price">
+					<div class="item-price-value">3 900 руб.</div>
+					<a class="btn btn-main" href="#">Купить</a>
+				</div>
+
 			</article>
+			
 		</div>
 
 		<div class="goods-pagination">
 			<ul>
 				<li>
-					<a class="btn btn-page" href="#">1</a> 	
+					<a class="btn btn-pagination" href="#">1</a> 	
+				</li>
+				<li class="active">
+					<a class="btn btn-pagination" href="#">2</a> 	
 				</li>
 				<li>
-					<a class="btn btn-page" href="#">2</a> 	
+					<a class="btn btn-pagination" href="#">3</a> 	
 				</li>
 				<li>
-					<a class="btn btn-page" href="#">3</a> 	
-				</li>
-				<li>
-					<a class="btn btn-page" href="#">4</a> 	
+					<a class="btn btn-pagination" href="#">4</a> 	
 				</li>
 			</ul>  
 		</div>
