--- a/catalog-item.html
+++ b/catalog-item.html
@@ -56,17 +56,17 @@
         </header>
         <div class="item-block">
 
-            <div class="item-gallery">
-                <div class="item-gallery-content">
+            <div class="item-image">
+                <div class="item-image-main">
                     <img src="#" width="460" height="498" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </div>
-                <a href="#" class="item-img-mini">
+                <a href="#" class="item-imgage-add">
                     <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </a href="#">
-                <a href="#" class="item-img-mini">
+                <a href="#" class="item-imgage-add">
                     <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </a href="#">
-                <a href="#" class="item-img-mini">
+                <a href="#" class="item-imgage-add">
                     <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </a href="#">
             </div>
