--- a/catalog.html
+++ b/catalog.html
@@ -114,7 +114,7 @@
 				</a>
 
 				<div class="item-name">
-					<a href="#">Набор для путешествий<br><span>&#171;Baxter of Califotnia&#187;</span></a>
+					<a href="#">Набор для путешествий<span>&#171;Baxter of Califotnia&#187;</span></a>
 				</div>
 
 				<div class="item-price">
@@ -131,7 +131,7 @@
 				</a>
 
 				<div class="item-name">
-					<a href="#">Увлажняющий кондиционер<br><span>&#171;Baxter of Califotnia&#187;</span></a>
+					<a href="#">Увлажняющий кондиционер<span>&#171;Baxter of Califotnia&#187;</span></a>
 				</div>
 
 				<div class="item-price">
@@ -148,7 +148,7 @@
 				</a>
 
 				<div class="item-name">
-					<a href="#">Гель для волос<br><span>&#171;Suavecito&#187;</span></a>
+					<a href="#">Гель для волос<span>&#171;Suavecito&#187;</span></a>
 				</div>
 
 				<div class="item-price">
@@ -165,7 +165,7 @@
 				</a>
 
 				<div class="item-name">
-					<a href="#">Глина для укладки волос<br><span>&#171;American crew&#187;</span></a>
+					<a href="#">Глина для укладки волос<span>&#171;American crew&#187;</span></a>
 				</div>
 
 				<div class="item-price">
@@ -182,7 +182,7 @@
 				</a>
 
 				<div class="item-name">
-					<a href="#">Гель для волос<br><span>&#171;American crew&#187;</span></a>
+					<a href="#">Гель для волос<span>&#171;American crew&#187;</span></a>
 				</div>
 
 				<div class="item-price">
@@ -199,7 +199,7 @@
 				</a>
 
 				<div class="item-name">
-					<a  href="#">Набор для бритья<br><span>&#171;Baxter of Califotnia&#187;</span></a>
+					<a  href="#">Набор для бритья<span>&#171;Baxter of Califotnia&#187;</span></a>
 				</div>
 
 				<div class="item-price">
