--- a/catalog-item.html
+++ b/catalog-item.html
@@ -46,7 +46,7 @@
                         <a href="#">Магазин</a>
                     </li>
                     <li>
-                        <span><a href="#">Средства для ухода</a></span>
+                        <a href="#">Средства для ухода</a>
                     </li>
                     <li>
                         Набор для путешествий &#171;Baxter of Califotnia&#187;
@@ -91,7 +91,7 @@
 
                 <div class="item-price">
                     <p class="item-price-value">2 900 руб.</p>
-                    <button class="btn btn-main" type="submit">Купить</button>
+                    <a class="btn btn-main" href="#">Купить</a>
                 </div>
                 <div class="item-composition">
                     <h2>В набор входят:</h2>
