графика, стили, правки

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <div class="container">
             <div class="header-logo">
-                <a href="#"><img src="http://placehold.it/111x20" width="111" height="20" alt="Барбершоп"></a>
+                <a href="#"><img src="img/logo-inner.png" width="111" height="24" alt="Барбершоп"></a>
             </div>
             <nav class="main-navigation">
                 <ul>    
@@ -58,16 +58,16 @@
 
             <div class="item-image">
                 <div class="item-image-main">
-                    <img src="#" width="460" height="498" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-main.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </div>
                 <a href="#" class="item-imgage-add">
-                    <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-add-1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </a href="#">
                 <a href="#" class="item-imgage-add">
-                    <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-add-2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </a href="#">
                 <a href="#" class="item-imgage-add">
-                    <img src="#" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-add-3.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
                 </a href="#">
             </div>
 
