--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 	<header class="main-header">
 		<div class="container">
 			<div class="header-logo">
-				<a href="#"><img src="http://placehold.it/111x20" width="111" height="20" alt="Barbershop"></a>
+				<a href="#"><img src="img/logo-inner.png" width="111" height="24" alt="Barbershop"></a>
 			</div>
 			<nav class="main-navigation">
 				<ul>
@@ -110,7 +110,7 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+					<img src="img/catalog/BOC-travel.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
 				</a>
 
 				<div class="item-name">
@@ -127,7 +127,7 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="http://placehold.it/220x165" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of Califotnia&#187;">
+					<img src="img/catalog/BOC-conditioner.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of Califotnia&#187;">
 				</a>
 
 				<div class="item-name">
@@ -144,7 +144,7 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
+					<img src="img/catalog/SUA-gel.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
 				</a>
 
 				<div class="item-name">
@@ -161,7 +161,7 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="http://placehold.it/220x165" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
+					<img src="img/catalog/AC-clay.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
 				</a>
 
 				<div class="item-name">
@@ -178,7 +178,7 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="http://placehold.it/220x165" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
+					<img src="img/catalog/AC-gel.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
 				</a>
 
 				<div class="item-name">
@@ -195,7 +195,7 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="http://placehold.it/220x165" width="220" height="165" alt="Набор для бритья &#171;Baxter of Califotnia&#187;">
+					<img src="img/catalog/BOC-shaving.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of Califotnia&#187;">
 				</a>
 
 				<div class="item-name">
