--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <header class="main-header">
@@ -36,7 +37,7 @@
     </header>
     <main class="container">
     <header class="item-name">
-            <h1>Набор для путешествий &#171;Baxter of Califotnia&#187;</h1>
+            <h1>Набор для путешествий &#171;Baxter of California&#187;</h1>
             <div class="breadcrumbs">
                 <ul>
                     <li>
@@ -49,7 +50,7 @@
                         <a href="#">Средства для ухода</a>
                     </li>
                     <li>
-                        Набор для путешествий &#171;Baxter of Califotnia&#187;
+                        Набор для путешествий &#171;Baxter of California&#187;
                     </li>
                 </ul>
             </div>
@@ -58,16 +59,16 @@
 
             <div class="item-image">
                 <div class="item-image-main">
-                    <img src="img/catalog-item/image-main.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-main.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of California&#187;">
                 </div>
                 <a href="#" class="item-imgage-add">
-                    <img src="img/catalog-item/image-add-1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-add-1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
                 </a href="#">
                 <a href="#" class="item-imgage-add">
-                    <img src="img/catalog-item/image-add-2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-add-2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
                 </a href="#">
                 <a href="#" class="item-imgage-add">
-                    <img src="img/catalog-item/image-add-3.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+                    <img src="img/catalog-item/image-add-3.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
                 </a href="#">
             </div>
 
