--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Барбершоп «Бородинский»</title>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -110,11 +111,11 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="img/catalog/BOC-travel.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of Califotnia&#187;">
+					<img src="img/catalog/BOC-travel.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
 				</a>
 
 				<div class="item-name">
-					<a href="#">Набор для путешествий<span>&#171;Baxter of Califotnia&#187;</span></a>
+					<a href="#">Набор для путешествий<span>&#171;Baxter of California&#187;</span></a>
 				</div>
 
 				<div class="item-price">
@@ -127,11 +128,11 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="img/catalog/BOC-conditioner.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of Califotnia&#187;">
+					<img src="img/catalog/BOC-conditioner.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
 				</a>
 
 				<div class="item-name">
-					<a href="#">Увлажняющий кондиционер<span>&#171;Baxter of Califotnia&#187;</span></a>
+					<a href="#">Увлажняющий кондиционер<span>&#171;Baxter of California&#187;</span></a>
 				</div>
 
 				<div class="item-price">
@@ -195,11 +196,11 @@
 			<article class="goods-item">
 
 				<a href="#">
-					<img src="img/catalog/BOC-shaving.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of Califotnia&#187;">
+					<img src="img/catalog/BOC-shaving.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
 				</a>
 
 				<div class="item-name">
-					<a  href="#">Набор для бритья<span>&#171;Baxter of Califotnia&#187;</span></a>
+					<a  href="#">Набор для бритья<span>&#171;Baxter of California&#187;</span></a>
 				</div>
 
 				<div class="item-price">
